--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-            Hi Tim1234
-            abcdefgh
-
+            <a href="./Tim_Table.html">課表作業</a>
 </body>
 </html>
