--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-            <a href="./Tim_Table.html">課表作業</a>
+            <a href="./Tim_Table.html">課表作業1</a>
 </body>
 </html>
