--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
             <a href="./Tim_Table.html">課表作業1</a>
+            <a href="./shopee/shopee.html">蝦皮切版</a>
 </body>
 </html>
