--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-            <a href="./Tim_Table.html">課表作業1</a>
-            <a href="./shopee/shopee.html">蝦皮切版</a>
+    <ul>
+        <li> <a href="./tableform/Tim_Table.html">課表作業1</a></li>
+        <li> <a href="./shopee/shopee.html">蝦皮切版</a></li>
+    </ul>
 </body>
+
 </html>
