--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <ul>
-        <li> <a href="./tableform/Tim_Table.html">課表作業1</a></li>
+        <li> <a href="./tableform/Tim_Table.html">課表作業</a></li>
         <li> <a href="./shopee/shopee.html">蝦皮切版</a></li>
     </ul>
 </body>
