--- a/Google/google.html
+++ b/Google/google.html
@@ -1,12 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google</title>
+    <link rel="stylesheet" href="./google.css">
 </head>
+
 <body>
-    
+    <div class="wrap">
+        <div class="header">
+            <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox">Gmail</a>
+            <a href="https://www.google.com.tw/imghp?hl=zh-TW&tab=ri&ogbl">圖片</a>
+            <a href="#"> <img src="./img/點..png"></a>
+            <a href="#"><img src="./img/登錄賬號-removebg-preview.png"></a>
+        </div>
+
+        <div class="logo">
+            <img src="./img/白色google.png">
+        </div>
+
+        <div class="search">
+            <div class="search_icon">
+                <img class="glass" src="./img/放大鏡.png" alt="">
+                <input type="search" placeholder="搜尋 Google 或輸入網址">
+                <img class="mic" src="./img/麥克風.png" alt="">
+            </div>
+        </div>
+
+        <div class="item">
+            <div class=" item_icon">
+                <a href="https://www.youtube.com"><img src="./img/yt去背.png" >
+                    <h4>youtube</h4></a>
+            </div>
+
+            <div class=" item_icon">
+                <a href=><img src="./img/白色+.png" >
+                    <h4>新增捷徑</h4></a>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
