--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <ol>
         <li> <a href="./tableform/Tim_Table.html">課表作業</a></li>
         <li> <a href="./shopee/shopee.html">蝦皮切版</a></li>
+        <li> <a href="./Google/google.html">google首頁切版</a></li>
     </ol>
 </body>
 
