--- a/Variegated/Variegated.html
+++ b/Variegated/Variegated.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Variegated – Fashion & Beauty</title>
     <link rel="stylesheet" href="./css reset.css">
-    <link rel="stylesheet" href="./Variegated.css">
+    <!-- <link rel="stylesheet" href="./Variegated.css"> -->
     <script src="https://kit.fontawesome.com/933a0ce8b3.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
 
-    <div class="wrap">
+    <!-- <div class="wrap">
         <!-- <header>
             <div class="head-bar">
                 <div class="header-contact">
@@ -408,7 +408,7 @@
                 </ul>
             </div>
         </footer> -->
-    </div>
+    </div> -->
 </body>
 
 </html>
