--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <li> <a href="./ShopLine/Shopline.html">ShopLine切版</a></li>
         <li> <a href="./TOYOTA/Toyota.html">TOYOTA切版</a></li>
         <li><a href="./Profile/profile.html">Profile</a></li>
+        <li><a href="./ChartMarketingShare/ChartMarketingShare.html">ChartMarketingShare</a></li>
     </ol>
 </body>
 
