--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <li> <a href="./TOYOTA/Toyota.html">TOYOTA切版</a></li>
         <li><a href="./Profile/profile.html">Profile</a></li>
         <li><a href="./ChartMarketingShare/ChartMarketingShare.html">ChartMarketingShare</a></li>
+        <li><a href="./終極密碼/終極密碼.html">終極密碼</a></li>
     </ol>
 </body>
 
