--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <li><a href="./Profile/profile.html">Profile</a></li>
         <li><a href="./ChartMarketingShare/ChartMarketingShare.html">ChartMarketingShare</a></li>
         <li><a href="./終極密碼/終極密碼.html">終極密碼</a></li>
+        <li><a href="./猜數字/猜數字.html">猜數字</a></li>
     </ol>
 </body>
 
