--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <li><a href="./Profile/profile.html">Profile</a></li>
         <li><a href="./ChartMarketingShare/ChartMarketingShare.html">ChartMarketingShare</a></li>
         <li><a href="./終極密碼/終極密碼.html">終極密碼</a></li>
-        <li><a href="./猜數字/猜數字.html">猜數字</a></li>
+        <li><a href="./1A2B/1A2B.html">猜數字</a></li>
         <li><a href="./LOL/LOL.html">LOL</a></li>
         <li><a href="./TodoList/TodoList.html">TodoList</a></li>
-        <li><a href="./行事曆/行事曆.html">行事曆</a></li>
+        <li><a href="./calendar/calendar.html">行事曆</a></li>
     </ol>
 </body>
 
