--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <li><a href="./LOL/LOL.html">LOL</a></li>
         <li><a href="./TodoList/TodoList.html">TodoList</a></li>
         <li><a href="./calendar/calendar.html">行事曆</a></li>
+        <li><a href="./ocr to translate-text/.index">小說文章辨識翻譯</a></li>
     </ol>
 </body>
 
