--- a/ocr to translate-text/index.html
+++ b/ocr to translate-text/index.html
@@ -49,7 +49,7 @@
 </head>
 
 <body class="p-3 ">
-    <h1 class="col-md-6 text-info ">小說文章辨識翻譯</h1>
+    <h1 class="col-md-6 text-info ">小說漫畫翻譯器</h1>
     <div class="col-md-6">
         <div class="input-group mb-3">
             <input type="text" class="form-control" id="inputImage" placeholder="輸入要翻譯圖片的網址，然後按下【識別】" />
