--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <li><a href="./TodoList/TodoList.html">TodoList</a></li>
         <li><a href="./calendar/calendar.html">行事曆</a></li>
         <li><a href="./ocr to translate-text/index.html">小說漫畫辨識翻譯</a></li>
+        <li><a href="./pdf LIFF/index.html">line檔案上傳</a></li>
     </ol>
 </body>
 
